[tool.poetry]
name = "hardwario"
version = "1.6.3"
description = "HARDWARIO Command Line Tool"
authors = ["Karel Blavka <karel.blavka@hardwario.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hardwario/py-hardwario"
repository = "https://github.com/hardwario/py-hardwario"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console"
]

packages = [
    { include = "hardwario" },
]

[tool.poetry.scripts]
hardwario = "hardwario.cli:main"

[tool.poetry.dependencies]
python = ">=3.9, <4"
click = "^8.1.8"
loguru = "^0.7.3"
pynrfjprog = "^10.24.2"
paho-mqtt = "^2.1.0"
requests = "^2.32.3"
rttt = "^1.3.1"
urllib3 = "^2.4.0"
certifi = "^2025.1.31"
tomli-w = "^1.2.0"
pylink-square = "^1.6.0"

[poetry.group.dev.dependencies]
pycodestyle = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
